# singapore-property-prices

./: .gitignore  README.md  constants.py  database.py  main.py  models.py  pyproject.toml  resale_location_data.json  sql_app.db  utils.py
databases/: sqlite.py
schemas/: crud.py  resale_location.py
scripts/: get_resale_data.py  get_resale_location_data.py
tables/: resale_location.py
