[tool.poetry]
name = "singapore-property-prices"
version = "0.1.0"
description = ""
authors = ["roycehoe <royceinbox@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
