[tool.poetry]
name = "singapore-property-prices"
version = "0.1.0"
description = ""
authors = ["roycehoe <royceinbox@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
black = "^23.1.0"
fastapi = "^0.92.0"
SQLAlchemy = "^2.0.4"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
